Fixing folder stucture

--- a/Week1/1.FactorProduct.ipynb
+++ b/Week1/1.FactorProduct.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Factor Product using pandas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -24,8 +31,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I think that the most natural way fo representing factors is using `pandas.Series` with `MultiIndex`  \n",
-    "Here is the first factor from the lectures:"
+    "**I think that the most natural way for representing factors in `pandas` is using `pandas.Series` with `MultiIndex`.  \n",
+    "Here is the first factor from the lectures:**"
    ]
   },
   {
@@ -101,9 +108,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unfortunately, `pandas.merge` on multiindexes is not implemented yet, so we'll need to reset the \n",
-    "indices and do the merge manually.  \n",
-    "Here is one way to calculate the factor product:"
+    "**Unfortunately, `pandas.merge` on multiindexes is not implemented yet, so we'll need to reset the  \n",
+    "indices and do the merge manually. Here is one way to calculate the factor product:**"
    ]
   },
   {
@@ -150,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, lets make it a function:"
+    "**Finally, lets make it a function:**"
    ]
   },
   {
