--- a/Week1/3.Reduction.ipynb
+++ b/Week1/3.Reduction.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Factor reduction in pandas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
@@ -22,8 +29,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Again, I use `pandas.Series` with a `Multiindex` to represent a factor (the one from the lectures):**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -47,7 +61,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,6 +73,13 @@
     "    [0.25, 0.35, 0.08, 0.16, 0.05, 0.07, 0.0, 0.0, 0.15, 0.21, 0.07, 0.14],\n",
     "    index=mindex)\n",
     "factor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**The factor reduction is then equivalent to making \"cross section\" of the MultiIndexed series:**"
    ]
   },
   {
@@ -88,6 +109,25 @@
    ],
    "source": [
     "factor.xs(1, level='c')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**The reduction function is then:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def Reduce(factor, variable, value):\n",
+    "    return factor.xs(value, variable)"
    ]
   },
   {
