--- a/Week1/2.Marginalization.ipynb
+++ b/Week1/2.Marginalization.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Margianlization using pandas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
@@ -25,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Again, I use `pandas.Series` with a `Multiindex` to represent a factor (this is the one from )"
+    "**Again, I use `pandas.Series` with a `Multiindex` to represent a factor (the one from the lectures):**"
    ]
   },
   {
@@ -72,8 +79,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Doing marginalization is fairly trivial:  \n",
-    "We just need to `unstack` one level ... "
+    "**Doing marginalization in `pandas` is fairly trivial:  \n",
+    "We just need to `unstack` one level ... **"
    ]
   },
   {
@@ -164,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "... and then sum over the rows."
+    "**... and then sum over the rows.**"
    ]
   },
   {
@@ -200,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets make it a function "
+    "**Lets make it a function:** "
    ]
   },
   {
@@ -213,33 +220,6 @@
    "source": [
     "def Marginalize(factor, variable):\n",
     "    return factor.unstack(variable).sum(axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "b  c\n",
-       "1  1    0.25\n",
-       "   2    0.35\n",
-       "2  1    0.08\n",
-       "   2    0.16\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "factor.xs(1, level='a')"
    ]
   },
   {
