Finishing notebooks for week1

--- a/Week1/3.Reduction.ipynb
+++ b/Week1/3.Reduction.ipynb
@@ -127,7 +127,7 @@
    "outputs": [],
    "source": [
     "def Reduce(factor, variable, value):\n",
-    "    return factor.xs(value, variable)"
+    "    return factor.xs(value, level=variable)"
    ]
   },
   {
